--- a/js/package.json
+++ b/js/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tailwindcss/forms" :^0.5.3",
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.3",
     "igv": "^2.13.9",
